<resources>
    <string name="app_name">Ccalc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="bttakephoto">Take photo</string>
    <string name="gocam">SCAN</string>
    <string name="gowrite">WRITE</string>
    <string name="logodesc">logo</string>
    <string name="btScanAgain">SCAN AGAIN</string>
    <string name="btClear">Clear screen</string>
    <string name="btSend">Send</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_drawing">drawingActivity</string>
    <string name="title_activity_draw_result">DrawResultActivity</string>
    <string name="CdIvtoolbar">logo</string>
    <string name="title_activity_login_activitysads">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="ivlogocd">Logo</string>
    <string name="frcd">flechaReturn</string>
    <string name="TVoperation">Operation</string>
    <string name="OpEnunciat">Operation</string>
    <string name="resEnunciat">Result</string>
    <string name="ipTextHint">type IP</string>
    <!--<string name="userplaceholder">Usuari</string>
    <string name="passplaceholder">Contrasenya</string>
    <string name="rememberPass">¿Has oblidat la contrasenya?</string>
    <string name="entrar">Entrar</string>
    <string name="funcions">Perdràs funcionalitats adicionals</string>-->
</resources>
