<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#3a5795">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/imageLogo"
            android:layout_gravity="center_horizontal"

            android:src="@drawable/ccalc"
            android:contentDescription="@string/logodesc"
            android:layout_weight="1"
            android:layout_marginBottom="40dp" />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gocam"
                android:id="@+id/btScan"
                android:enabled="true"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="@drawable/blue_button"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="50dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gowrite"
                android:id="@+id/btWrite"
                android:enabled="true"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="@drawable/blue_button"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="50dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
